--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             </div>
         </div>
     </section>
+    <section></section>
     <footer>
         <i class="fa-brands fa-square-github fa-4x"></i>
         <i class="fa-brands fa-square-twitter fa-4x"></i>
