--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         </div>
     </section>
     <section></section>
+    <section>Cambio para testear git stash</section>
     <footer>
         <i class="fa-brands fa-square-github fa-4x"></i>
         <i class="fa-brands fa-square-twitter fa-4x"></i>
